Trunk fix: bug 29061, where relative width value of '*' was getting 0 instead of 1. Simple fix, r=karnaze b=29061